# scripts

./: README.md
coupon/: pyproject.toml
coupon/src/: main.py
coupon/src/config/: constant.py
coupon/src/utils/: date_utils.py  file_utils.py
fapiao/: README.md
fapiao/doc/: 开发文档.md
fapiao/src/: gui_main.py  main.py  read_excel.py
fapiao2/: .gitignore  README.md  pyproject.toml
fapiao2/src/: main.py
fapiao2/src/core/: browser_driver.py  invoice_processor.py
fapiao2/src/gui/: main_window.py
fapiao2/src/utils/: dotenv_loader.py  excel_handler.py  logger.py
